настройка переходов между страницами

--- a/New_folder/Create.html
+++ b/New_folder/Create.html
@@ -18,7 +18,7 @@
           </div>
            <div class="aboutus">
             <a class="sq" style="text-decoration:none;" href="">О КЛУБЕ</a>
-            <a class="sq" style="text-decoration:none;" href="">УСЛУГИ</a>
+            <a class="sq" style="text-decoration:none;" href="../services/services.html">УСЛУГИ</a>
             <a class="sq" style="text-decoration:none;" href="">SPA</a>
             <a class="sq" style="text-decoration:none;" href="">АБОНИМЕНТЫ</a>
             <a class="sq" style="text-decoration:none;" href="">ПРОГРАММЫ</a>
@@ -28,7 +28,7 @@
          </header>
      <div class="content">
         <div class="main_content">
-        <form action="" onsubmit="window.open('../MainpageReg/index.html', '_self')" target="_blank">
+         <form action="" onsubmit="window.open('../MainpageReg/index.html', '_self')" target="_blank">
             <center>
             <br>
             <p class="registration">Регистрация</p>
@@ -42,8 +42,8 @@
                 <button class="Entrance">Зарегестрироваться</button>
             <a class="create" href="../entrance/entrance.html">Есть аккаунт? Войти →</a>
              </center>
-    </form>
-</div>
+        </form>
+    </div>
      </div>    
     </div>
     <footer class="footer">
