--- a/UserAccount/User.html
+++ b/UserAccount/User.html
@@ -19,7 +19,7 @@
                 <div class="aboutus">
                     <div class="alllink">
                         <a class="sq" style="text-decoration:none;" href="">О КЛУБЕ</a>
-                        <a class="sq" style="text-decoration:none;" href="">УСЛУГИ</a>
+                        <a class="sq" style="text-decoration:none;" href="../servicesReg/services.html">УСЛУГИ</a>
                         <a class="sq" style="text-decoration:none;" href="">SPA</a>
                         <a class="sq" style="text-decoration:none;" href="">АБОНИМЕНТЫ</a>
                         <a class="sq" style="text-decoration:none;" href="">ПРОГРАММЫ</a>
