--- a/entrance/entrance.html
+++ b/entrance/entrance.html
@@ -18,7 +18,7 @@
           </div>
            <div class="aboutus">
             <a class="sq" style="text-decoration:none;" href="">О КЛУБЕ</a>
-            <a class="sq" style="text-decoration:none;" href="">УСЛУГИ</a>
+            <a class="sq" style="text-decoration:none;" href="../services/services.html">УСЛУГИ</a>
             <a class="sq" style="text-decoration:none;" href="">SPA</a>
             <a class="sq" style="text-decoration:none;" href="">АБОНИМЕНТЫ</a>
             <a class="sq" style="text-decoration:none;" href="">ПРОГРАММЫ</a>
@@ -36,13 +36,12 @@
             <input type="password" class="pass" required placeholder="Password" name="password" id=""><br><br>
             <input type="submit" class="Entrance" value="Войти"><br>
             <a class="forgot" href="">Забыли почту/пароль?</a><br>
-            <a class="create" href="../Create.html">Создать аккаунт</a>
+            <a class="create" href="../New_folder/Create.html">Создать аккаунт</a>
             </center>
             </form>
         </div>
      </div>    
     </div>
-    <div class="crutch"></div>
     <footer class="footer">
         <div class="footer_content">
             <a style="text-decoration:none;" class="footlnk" href="">О нас</a>
