--- a/servicesReg/services.html
+++ b/servicesReg/services.html
@@ -6,13 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Услуги</title>
         <link rel="icon" href="../pictures/ico.ico">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="wrapper">
             <header class="header">
                 <div class="GW">
-                    <a class="lnk" style="text-decoration:none;" href="../MainPage/index.html">GW
+                    <a class="lnk" style="text-decoration:none;" href="../MainpageReg/index.html">GW
                         Fitness
                     </a>
                 </div>
@@ -23,7 +23,7 @@
                     <a class="sq" style="text-decoration:none;" href="">АБОНИМЕНТЫ</a>
                     <a class="sq" style="text-decoration:none;" href="">ПРОГРАММЫ</a>
                     <a class="sq" style="text-decoration:none;" href="">ТРЕНЕРЫ</a>
-                    <a class="sq" style="text-decoration:none; pointer-events: none;" href="">ВОЙТИ</a>
+                    <a class="sq" style="text-decoration:none;" href="../UserAccount/User.html">USER</a>
                 </div>
             </header>
             <div class="content">
