--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -16,7 +16,7 @@
             <div class="aboutus">
                 <div class="alllink">
                     <a class="sq" style="text-decoration:none;" href="">О КЛУБЕ</a>
-                    <a class="sq" style="text-decoration:none;" href="">УСЛУГИ</a>
+                    <a class="sq" style="text-decoration:none;" href="../services/services.html">УСЛУГИ</a>
                     <a class="sq" style="text-decoration:none;" href="">SPA</a>
                     <a class="sq" style="text-decoration:none;" href="">АБОНЕМЕНТЫ</a>
                     <a class="sq" style="text-decoration:none;" href="">ПРОГРАММЫ</a>
