настроил header для основной страницы

--- a/UserAccount/User.html
+++ b/UserAccount/User.html
@@ -59,7 +59,7 @@
                 <button class="button1">Выбор программы</button>
             </div>
             <div class="buttons">
-                <button class="button2"><a class="" href="../MainPage/index.html">Выход из профиля←</a> </button>
+                <button class="button2"><a class="exit" href="../MainPage/index.html">Выход из профиля←</a> </button>
             </div>
         </div>
         <footer class="footer">
