--- a/entrance/entrance.html
+++ b/entrance/entrance.html
@@ -21,9 +21,12 @@
             <a class="sq" style="text-decoration:none;" href="../services/services.html">УСЛУГИ</a>
             <a class="sq" style="text-decoration:none;" href="">SPA</a>
             <a class="sq" style="text-decoration:none;" href="">АБОНИМЕНТЫ</a>
-            <a class="sq" style="text-decoration:none;" href="">ПРОГРАММЫ</a>
             <a class="sq" style="text-decoration:none;" href="">ТРЕНЕРЫ</a>
             <a class="sq" style="text-decoration:none; pointer-events: none;" href="">ВОЙТИ</a>
+            <div class="phone">
+                <div class="phone_number">+7(960)479-86-56</div>
+                <a href="" class="phone_link">Заказать звонок</a>
+            </div>
            </div>
          </header>
      <div class="content">
