--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -19,9 +19,12 @@
                     <a class="sq" style="text-decoration:none;" href="../services/services.html">УСЛУГИ</a>
                     <a class="sq" style="text-decoration:none;" href="">SPA</a>
                     <a class="sq" style="text-decoration:none;" href="">АБОНЕМЕНТЫ</a>
-                    <a class="sq" style="text-decoration:none;" href="">ПРОГРАММЫ</a>
                     <a class="sq" style="text-decoration:none;" href="">ТРЕНЕРЫ</a>
                     <a class="sq" style="text-decoration:none;" href="../New_folder/Create.html">ВХОД</a>
+                    <div class="phone">
+                        <div class="phone_number">+7(960)479-86-56</div>
+                        <a href="" class="phone_link">Заказать звонок</a>
+                    </div>
                 </div>
             </div>
         </header>
