доделал блок с клубными картами

--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -93,7 +93,7 @@
             <img class="img5" src="C:\Web\RepositoryFitnesSite\pictures\barbell.png">
             <div>
                 <p style="font-size: 80px; padding-left: 32%; margin-top: -60%; color: white;">КЛУБНЫЕ КАРТЫ</p>
-                <p style="font-size: 43px; padding-left: 29%; margin-top: -2%; color: white;">Современный фитнес-клуб для всей семьи</p>
+                <p style="font-size: 45px; padding-left: 28%; margin-top: -2%; color: white;">Современный фитнес-клуб для всей семьи</p>
                 <div class="miniBlocks" style="margin-left: 5%; margin-top: 5%;">
                     <p style="font-size: 35px; text-align: center; padding-top: 20px;">12 МЕСЯЦЕВ + 2 МЕСЯЦА ЗАМОРОЗКИ</p>
                     <P style="font-size: 25px; text-align: center;">Клубное членство</P>
@@ -106,7 +106,17 @@
                     <p style="font-size: 35px; text-align: center; padding-top: 20px;">6 МЕСЯЦЕВ</p>
                     <p style="font-size: 25px; text-align: center;">Клубное членство</p>
                 </div>
+                <p style="color: white; font-size: 45px; padding-left: 100px; padding-top: 50px;">Почему мы?</p>
+                <p style="color: white; font-size: 30px; padding-left: 100px;">Наш фитнес - это:</p>
+                <li style="color: white; font-size: 30px; padding-left: 120px;">высокий уровень комфорта, который проявляется во всём: 
+                от оснащения раздевалок до индивидуального подхода тренеров;</li>
+                <li style="color: white; font-size: 30px; padding-left: 120px; padding-top: 30px;">разнообразие программ, позволяющих выбрать оптимальный
+                уровень и режим нагрузок для каждого члена вашей семьи;</li>
+                <li style="color: white; font-size: 30px; padding-left: 120px; padding-top: 30px;">приятное общение с единомышленниками, однородность социальной среды.</li>
             </div>
         </div>
+        <footer>
+
+        </footer>
     </body>
 </html>
