подправил header и footer на всех страницах

--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -14,18 +14,16 @@
                 </a>
             </div>
             <div class="aboutus">
-                <div class="alllink">
                     <a class="sq" style="text-decoration:none;" href="">О КЛУБЕ</a>
                     <a class="sq" style="text-decoration:none;" href="../services/services.html">УСЛУГИ</a>
                     <a class="sq" style="text-decoration:none;" href="">SPA</a>
                     <a class="sq" style="text-decoration:none;" href="">АБОНЕМЕНТЫ</a>
                     <a class="sq" style="text-decoration:none;" href="">ТРЕНЕРЫ</a>
-                    <a class="sq" style="text-decoration:none;" href="../New_folder/Create.html">ВХОД</a>
-                    <div class="phone">
-                        <div class="phone_number">+7(960)479-86-56</div>
-                        <a href="" class="phone_link">Заказать звонок</a>
-                    </div>
-                </div>
+                    <a class="sq" style="text-decoration:none;" href="../entrance/entrance.html">ВХОД</a>
+            </div>
+            <div class="phone">
+                <div class="phone_number">+7(960)479-86-56</div>
+                <a href="" class="phone_link">Заказать звонок</a>
             </div>
         </header>
         <div class="block1">
@@ -38,74 +36,85 @@
                 <div class="buttonMore">
                     <a class="linkMore" href="">Подробнее</a>
                 </div>
-                <img src="../pictures/eERXP9QgrMk.jpg" class="imgMain">
              </div>
         </div>
         <div class="block2">
-            <center>
-                <p style="font-size: 50px; padding-right: 100px;">GW Fitness</p>
-                <p style="font-size: 38px; padding-right: 100px">Современный фитнес-клуб для всей семьи</p>
-            </center>
+            <div class="block2_name">
+                <p style="font-size: 50px;">GW Fitness</p>
+                <p style="font-size: 38px;">Современный фитнес-клуб для всей семьи</p>
+            </div>
             <div class="info">
-                <p style="padding-right: 100px;">3-этажный фитнес-клуб с бассейном, созданный для реализации вашего потенциала!</p>
-                <p style="padding-right: 100px;">Вступая в ряды нашей большой дружной команды, вы получаете возможность создать красивое, гармоничное, сильное тело, укрепить здоровье.</p>
-                <div class="img2">
+                <div class="info_text">
+                    <p >3-этажный фитнес-клуб с бассейном, созданный для реализации вашего потенциала!</p>
+                    <p >Вступая в ряды нашей большой дружной команды, вы получаете возможность создать красивое, гармоничное, сильное тело, укрепить здоровье.</p>
+                </div>
+                            <div class="img2">
                     <img style="width: 540px; height: 420px;" src="../pictures/hall.jpg">
                 </div>
-                <div class="info2">
-                    <figure class="bus">
-                        <img style="width: 50px;" src="../pictures/bus.jpg">
-                        <figcaption>Отдельный детский центр: занятия в бассейне и зале</figcaption>
-                    </figure>
-                    <figure class="dum">
-                        <img style="width: 50px;" src="../pictures/dum.jpg">
-                        <figcaption>Студия единоборств и функционального тренинга</figcaption>
-                    </figure>
-                    <figure class="arm">
-                        <img style="width: 50px;" src="../pictures/arm.png">
-                        <figcaption>Краткосрочные программы на результат</figcaption>
-                    </figure>
-                    <hr style="margin-top: 4%; width: 1500px;"></hr>
-                </div>
+            </div>
+             <div class="info2">
+                <figure class="bus">
+                    <img style="width: 50px;" src="../pictures/bus.jpg">
+                    <figcaption>Отдельный детский центр: занятия в бассейне и зале</figcaption>
+                </figure>
+                <figure class="dum">
+                    <img style="width: 50px;" src="../pictures/dum.jpg">
+                    <figcaption>Студия единоборств и функционального тренинга</figcaption>
+                </figure>
+                <figure class="arm">
+                    <img style="width: 50px;" src="../pictures/arm.png">
+                    <figcaption>Краткосрочные программы на результат</figcaption>
+                </figure>
+                <hr style="margin-top: 1%; width: 1500px;"></hr>
             </div>
         </div>
         <div class="block3">
-            <p style="font-size: 50px; padding-left: 60%; margin-top: 10%">ТРЕНАЖЕРНЫЙ ЗАЛ</p>
-            <p style="font-size: 23px; padding-left: 60%; width: 500px;">
-                Отдельная группа кардио и силовых тренажеров, а также свободные веса. 
-                Оборудование от ведущих мировых производителей (Precor, Hoist и Matrix)
-                соответствует мировым стандартам качества и подходит как для опытных пользователей,
-                так и для новичков.</p>
-            <img class="img3" src="../pictures/image.png">
+            <div class="block3_info">
+                <img class="img3" src="../pictures/image.png">
+                <div class="block3_text">
+                    <p style="font-size: 50px;  margin-top: 10%">ТРЕНАЖЕРНЫЙ ЗАЛ</p>
+                    <p style="font-size: 23px;  width: 500px;">
+                        Отдельная группа кардио и силовых тренажеров, а также свободные веса. 
+                        Оборудование от ведущих мировых производителей (Precor, Hoist и Matrix)
+                        соответствует мировым стандартам качества и подходит как для опытных пользователей,
+                        так и для новичков.</p>
+                    </div>
+            </div>
             <hr style="margin-top: 4%; width: 1500px;"></hr>
         </div>
         <div class="block3">
-            <p style="font-size: 50px; padding-left: 10%; margin-top: 2%">25-ТИ МЕТРОВЫЙ БАССЕЙН</p>
-            <p style="font-size: 23px; padding-left: 10%; width: 500px;">
+            <div class="block3_info">
+                <div class="block3_text">
+            <p style="font-size: 50px; ">25-ТИ МЕТРОВЫЙ БАССЕЙН</p>
+            <p style="font-size: 23px;  width: 500px;">
                 В нашем клубе представлено 2 бассейна: для взрослых и детей. 
                 В водном комплексе проводится более 10 видов водных программ. 
                 Занятия в группах или индивидуально - с персональным тренером. 
                 Безупречное состояние воды обеспечивается за счёт метода комбинированнной системы обеззараживания, 
                 регулировки уровня PH и механической очистки воды.</p>
+                </div>
             <img class="img4" src="../pictures/pool.png">
         </div>
+        </div>
         <div class="block4">
-            <img class="img5" src="C:\Web\RepositoryFitnesSite\pictures\barbell.png">
-            <div>
-                <p style="font-size: 80px; padding-left: 32%; margin-top: -60%; color: white;">КЛУБНЫЕ КАРТЫ</p>
-                <p style="font-size: 45px; padding-left: 28%; margin-top: -2%; color: white;">Современный фитнес-клуб для всей семьи</p>
-                <div class="miniBlocks" style="margin-left: 5%; margin-top: 5%;">
+            <div class="block4_info">
+                <p style="font-size: 80px; color: white;">КЛУБНЫЕ КАРТЫ</p>
+                <p style="font-size: 45px;  color: white;">Современный фитнес-клуб для всей семьи</p>
+                <div class="bloks"> 
+                    <div class="miniBlocks">
                     <p style="font-size: 35px; text-align: center; padding-top: 20px;">12 МЕСЯЦЕВ + 2 МЕСЯЦА ЗАМОРОЗКИ</p>
                     <P style="font-size: 25px; text-align: center;">Клубное членство</P>
-                </div>
-                <div class="miniBlocks" style="margin-left: 37%; margin-top: -285px;">
+                   </div>
+                   <div class="miniBlocks" >
                     <p style="font-size: 35px; text-align: center; padding-top: 20px;">12 МЕСЯЦЕВ</p>
                     <p style="font-size: 25px; text-align: center;">Утро + день</p>
-                </div>
-                <div class="miniBlocks" style="margin-left: 70%; margin-top: -285px;">
+                  </div>
+                  <div class="miniBlocks" >
                     <p style="font-size: 35px; text-align: center; padding-top: 20px;">6 МЕСЯЦЕВ</p>
                     <p style="font-size: 25px; text-align: center;">Клубное членство</p>
+                   </div>
                 </div>
+               
                 <p style="color: white; font-size: 45px; padding-left: 100px; padding-top: 50px;">Почему мы?</p>
                 <p style="color: white; font-size: 30px; padding-left: 100px;">Наш фитнес - это:</p>
                 <li style="color: white; font-size: 30px; padding-left: 120px;">высокий уровень комфорта, который проявляется во всём: 
@@ -116,6 +125,11 @@
             </div>
         </div>
         <footer>
+            <div class="footer_content">
+            <a style="text-decoration:none;" class="footlnk" href="">О нас</a>
+            <a style="text-decoration:none;" class="footlnk" href="">Тех. поддержка</a> 
+            <a style="text-decoration:none;" class="footlnk" href="">Оставить отзыв</a>
+        </div>
 
         </footer>
     </body>
