--- a/UserAccount/User.html
+++ b/UserAccount/User.html
@@ -17,15 +17,16 @@
                     </a>
                 </div>
                 <div class="aboutus">
-                    <div class="alllink">
                         <a class="sq" style="text-decoration:none;" href="">О КЛУБЕ</a>
                         <a class="sq" style="text-decoration:none;" href="../servicesReg/services.html">УСЛУГИ</a>
                         <a class="sq" style="text-decoration:none;" href="">SPA</a>
                         <a class="sq" style="text-decoration:none;" href="">АБОНИМЕНТЫ</a>
-                        <a class="sq" style="text-decoration:none;" href="">ПРОГРАММЫ</a>
                         <a class="sq" style="text-decoration:none;" href="">ТРЕНЕРЫ</a>
                         <a class="sq" style="text-decoration:none;" href="">USER</a>
-                    </div>
+                </div>
+                <div class="phone">
+                    <div class="phone_number">+7(960)479-86-56</div>
+                    <a href="" class="phone_link">Заказать звонок</a>
                 </div>
             </header>
             <div class="content">
