--- a/entrance/entrance.html
+++ b/entrance/entrance.html
@@ -16,17 +16,18 @@
                 Fitness
             </a>
           </div>
-           <div class="aboutus">
-            <a class="sq" style="text-decoration:none;" href="">О КЛУБЕ</a>
-            <a class="sq" style="text-decoration:none;" href="../services/services.html">УСЛУГИ</a>
-            <a class="sq" style="text-decoration:none;" href="">SPA</a>
-            <a class="sq" style="text-decoration:none;" href="">АБОНИМЕНТЫ</a>
-            <a class="sq" style="text-decoration:none;" href="">ТРЕНЕРЫ</a>
-            <a class="sq" style="text-decoration:none; pointer-events: none;" href="">ВОЙТИ</a>
-            <div class="phone">
-                <div class="phone_number">+7(960)479-86-56</div>
-                <a href="" class="phone_link">Заказать звонок</a>
-            </div>
+          <div class="aboutus">
+           <a class="sq" style="text-decoration:none;" href="">О КЛУБЕ</a>
+           <a class="sq" style="text-decoration:none;" href="../services/services.html">УСЛУГИ</a>
+           <a class="sq" style="text-decoration:none;" href="">SPA</a>
+           <a class="sq" style="text-decoration:none;" href="">АБОНИМЕНТЫ</a>
+           <a class="sq" style="text-decoration:none;" href="">ТРЕНЕРЫ</a>
+           <a class="sq" style="text-decoration:none; pointer-events: none;" href="">ВОЙТИ</a>
+          </div>
+          <div class="phone">
+           <div class="phone_number">+7(960)479-86-56</div>
+           <a href="" class="phone_link">Заказать звонок</a>
+       </div>
            </div>
          </header>
      <div class="content">
@@ -45,7 +46,7 @@
         </div>
      </div>    
     </div>
-    <footer class="footer">
+    <footer>
         <div class="footer_content">
             <a style="text-decoration:none;" class="footlnk" href="">О нас</a>
             <a style="text-decoration:none;" class="footlnk" href="">Тех. поддержка</a> 
