--- a/New_folder/Create.html
+++ b/New_folder/Create.html
@@ -31,34 +31,34 @@
         </header>
      <div class="content">
         <div class="main_content">
-         <form action="" onsubmit="window.open('../MainpageReg/index.html', '_self')" target="_blank">
+         <form action="" onsubmit="return false;" target="_blank">
             <center>
             <br>
             <p class="registration">Регистрация</p>
             <div class="inputs">
                 <div class="inputs1">
-                    <input type="text" pattern="^[А-Яа-яЁё\s]+${3}" class="user_name"  placeholder="ФИО" required name="" id="">
-                    <input type="email"  class="email" required placeholder="Email" name="email" id="">
+                    <input type="text" pattern="^[А-Яа-яЁё\s]+${3}" class="user_name"  placeholder="ФИО" required name="" id="fio_field">
+                    <input type="email"  class="email" required placeholder="Email" name="email" id="email_field">
                 </div>
                 <div class="inputs1">
-                    <input type="password" onkeyup="active()" id="pswrd_1" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" class="pass" required placeholder="Password" name="password" id="">
+                    <input type="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" class="pass" required placeholder="Password" name="password" id="pass_first">
                     <div class="pass_and_mes">
                         <form action="#">
-                            <div class="error_text">Confirm Password Not Match</div>
-                            <input type="password" id="pswrd_2" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" class="pass" required placeholder="Replay password" name="Replay_password" id="">
+                            <div class="error_text" id="error_text">Confirm Password Not Match</div>
+                            <input type="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" class="pass" required placeholder="Replay password" name="Replay_password" id="pass_second">
                         </form>
                         
                     </div>
                 </div>
                 <div class="inputs1">
-                    <input class="login" pattern="^[a-zA-Z]+$" type="text" required placeholder="Login" name="" id="">
+                    <input class="login" pattern="^[a-zA-Z]+$" type="text" required placeholder="Login" name="" id="login_field">
                 </div>
             </div>
             <div required class="check"> 
                 <input type="checkbox" required name="" id="">
                 <span>Согласие на обработку персональных данных</span>
             </div><br><br>
-                <button  class="Entrance">Зарегестрироваться</button>
+                <button onclick="submitForm()" class="Entrance">Зарегестрироваться</button>
             <a class="create" href="../entrance/entrance.html">Есть аккаунт? Войти →</a>
              </center>
         </form>
@@ -71,6 +71,7 @@
             <a style="text-decoration:none;" class="footlnk" href="">Тех. поддержка</a> 
             <a style="text-decoration:none;" class="footlnk" href="">Оставить отзыв</a>
         </div>
-    </footer>    
+    </footer>
+<script src="index.js" type="text/javascript"></script>
 </body>
 </html>
