подправил элементы в Услугах

--- a/services/services.html
+++ b/services/services.html
@@ -31,13 +31,13 @@
             </header>
             <div class="content">
                 <div class="aboniments">
-                    <div class="aboniment">
+                    <div class="aboniment" style="margin-top: -62px;">
                         <p>3 МЕС ДНЕВНОЙ</p>
                         <img class="img_aboniment" src="../pictures/man_1.jpg" alt="">      
                         <p>3 МЕСЯЦА АКТИВНОГО ЧЛЕНСТВА</p>
                         <p>2 ВВОДНЫЕ ТРЕНИРОВКИ</p>
                         <p>14 ДНЕЙ ЗАМОРОЗКИ</p>  
-                        <a class="sub" href="../entrance/entrance.html"><button class="but_sub">ПОДПИСАТЬСЯ</button></a>
+                        <a class="sub" style="margin-left: -40px;" href="../entrance/entrance.html"><button class="but_sub">ПОДПИСАТЬСЯ</button></a>
                   </div>    
                   <div class="aboniment">
                     <p>6 МЕС ДНЕВНОЙ</p>
@@ -47,7 +47,7 @@
                     <p>14 ДНЕЙ ЗАМОРОЗКИ</p>  
                     <p>2 ГОСТЕВЫХ ВИЗИТА</p>
                     <p>50 ГРУППОВЫХ ТРЕНИРОВОК</p>
-                    <a class="sub" href="../entrance/entrance.html"><button class="but_sub">ПОДПИСАТЬСЯ</button></a>
+                    <a class="sub" style="margin-left: -45px;" href="../entrance/entrance.html"><button class="but_sub">ПОДПИСАТЬСЯ</button></a>
                   </div>
                   <div class="aboniment">
                     <p>12 МЕС БЕЗЛИМИТНЫЙ</p>
@@ -57,7 +57,7 @@
                     <p>30 ДНЕЙ ЗАМОРОЗКИ</p>  
                     <p>2 ГОСТЕВЫХ ВИЗИТА</p>
                     <p>100 ГРУППОВЫХ ТРЕНИРОВОК</p>
-                    <a class="sub" href="../entrance/entrance.html"><button class="but_sub">ПОДПИСАТЬСЯ</button></a>
+                    <a class="sub" style="margin-left: -35px;" href="../entrance/entrance.html"><button class="but_sub">ПОДПИСАТЬСЯ</button></a>
                   </div>
 
                 </div>
