--- a/MainPage/index.html
+++ b/MainPage/index.html
@@ -115,21 +115,20 @@
                    </div>
                 </div>
                 <p style="color: white; font-size: 45px; padding-top: 50px; margin-left: -70%;">Почему мы?</p>
-                <p style="color: white; font-size: 30px;  margin-left: -70%; margin-top: -40px;">Наш фитнес - это:</p>
+                <p style="color: white; font-size: 30px; margin-left: -70%; margin-top: -40px;">Наш фитнес - это:</p>
                 <li style="color: white; font-size: 30px; margin-left: 50px;">высокий уровень комфорта, который проявляется во всём: 
                 от оснащения раздевалок до индивидуального подхода тренеров;</li>
                 <li style="color: white; font-size: 30px; padding-top: 30px; margin-left: 20px;">разнообразие программ, позволяющих выбрать оптимальный
                 уровень и режим нагрузок для каждого члена вашей семьи;</li>
-                <li style="color: white; font-size: 30px; padding-top: 30px; margin-left: -29%">приятное общение с единомышленниками, однородность социальной среды.</li>
+                <li style="color: white; font-size: 30px; padding-top: 30px; margin-left: -29%;">приятное общение с единомышленниками, однородность социальной среды.</li>
             </div>
         </div>
         <footer>
             <div class="footer_content">
-            <a style="text-decoration:none;" class="footlnk" href="">О нас</a>
-            <a style="text-decoration:none;" class="footlnk" href="">Тех. поддержка</a> 
-            <a style="text-decoration:none;" class="footlnk" href="">Оставить отзыв</a>
-        </div>
-
+                <a style="text-decoration:none;" class="footlnk" href="">О нас</a>
+                <a style="text-decoration:none;" class="footlnk" href="">Тех. поддержка</a> 
+                <a style="text-decoration:none;" class="footlnk" href="">Оставить отзыв</a>
+            </div>
         </footer>
     </body>
 </html>
