--- a/MainpageReg/index.html
+++ b/MainpageReg/index.html
@@ -7,7 +7,6 @@
         <link rel="icon" href="../pictures/ico.ico">
     </head>
     <body>
-        <div class="wrapper">
         <header class="header">
             <div class="GW">
                 <a class="GWlink" style="text-decoration:none;" href="index.html">GW
@@ -66,7 +65,7 @@
                     <img style="width: 50px;" src="../pictures/arm.png">
                     <figcaption>Краткосрочные программы на результат</figcaption>
                 </figure>
-                <hr style="margin-top: 1%; margin-left: -10%; width: 1500px;"></hr>
+                <hr style="margin-top: 1%; width: 1500px;"></hr>
             </div>
         </div>
         <div class="block3">
@@ -103,34 +102,33 @@
                 <p style="font-size: 45px;  color: white;">Современный фитнес-клуб для всей семьи</p>
                 <div class="bloks"> 
                     <div class="miniBlocks">
-                    <p style="font-size: 35px; text-align: center; padding-top: 20px;">12 МЕСЯЦЕВ + 2 МЕСЯЦА ЗАМОРОЗКИ</p>
-                    <P style="font-size: 25px; text-align: center;">Клубное членство</P>
-                   </div>
-                   <div class="miniBlocks" >
-                    <p style="font-size: 35px; text-align: center; padding-top: 20px;">12 МЕСЯЦЕВ</p>
-                    <p style="font-size: 25px; text-align: center;">Утро + день</p>
-                  </div>
-                  <div class="miniBlocks" >
-                    <p style="font-size: 35px; text-align: center; padding-top: 20px;">6 МЕСЯЦЕВ</p>
-                    <p style="font-size: 25px; text-align: center;">Клубное членство</p>
+                        <p style="font-size: 35px; text-align: center; padding-top: 20px;">12 МЕСЯЦЕВ + 2 МЕСЯЦА ЗАМОРОЗКИ</p>
+                        <P style="font-size: 25px; text-align: center;">Клубное членство</P>
+                    </div>
+                    <div class="miniBlocks" >
+                        <p style="font-size: 35px; text-align: center; padding-top: 20px;">12 МЕСЯЦЕВ</p>
+                        <p style="font-size: 25px; text-align: center;">Утро + день</p>
+                    </div>
+                    <div class="miniBlocks" >
+                        <p style="font-size: 35px; text-align: center; padding-top: 20px;">6 МЕСЯЦЕВ</p>
+                        <p style="font-size: 25px; text-align: center;">Клубное членство</p>
                    </div>
                 </div>
-               
-                <p style="color: white; font-size: 45px; padding-left: 100px; padding-top: 50px;">Почему мы?</p>
-                <p style="color: white; font-size: 30px; padding-left: 100px;">Наш фитнес - это:</p>
-                <li style="color: white; font-size: 30px; padding-left: 120px;">высокий уровень комфорта, который проявляется во всём: 
+                <p style="color: white; font-size: 45px; padding-left: 100px; margin-left: -70%;">Почему мы?</p>
+                <p style="color: white; font-size: 30px; margin-left: -70%; padding-left: 100px;">Наш фитнес - это:</p>
+                <li style="color: white; font-size: 30px; margin-left: 50px;">высокий уровень комфорта, который проявляется во всём: 
                 от оснащения раздевалок до индивидуального подхода тренеров;</li>
-                <li style="color: white; font-size: 30px; padding-left: 120px; padding-top: 30px;">разнообразие программ, позволяющих выбрать оптимальный
+                <li style="color: white; font-size: 30px; padding-top: 30px; margin-left: 20px;">разнообразие программ, позволяющих выбрать оптимальный
                 уровень и режим нагрузок для каждого члена вашей семьи;</li>
-                <li style="color: white; font-size: 30px; padding-left: 120px; padding-top: 30px;">приятное общение с единомышленниками, однородность социальной среды.</li>
+                <li style="color: white; font-size: 30px; padding-top: 30px; margin-left: -29%;">приятное общение с единомышленниками, однородность социальной среды.</li>
             </div>
-        </div>
         </div>
         <footer>
             <div class="footer_content">
                 <a style="text-decoration:none;" class="footlnk" href="">О нас</a>
                 <a style="text-decoration:none;" class="footlnk" href="">Тех. поддержка</a> 
-                <a style="text-decoration:none;" class="footlnk" href="">Оставить отзыв</a>            
+                <a style="text-decoration:none;" class="footlnk" href="">Оставить отзыв</a>     
+            </div>       
         </footer>
     </body>
 </html>
