--- a/UserAccount/User.html
+++ b/UserAccount/User.html
@@ -32,7 +32,7 @@
             <div class="content">
                 <div class="user_namephoto">
                 <div class="user_photo">
-                    <span>Фото профиля</span><br>
+                    <span>Ваше фото</span><br>
                     <img class="user_onlyphoto" src="../pictures/you.jpg" alt="user">
                 </div>
                 <div class="info">
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div class="buttons">
-                    <button class="button1">Просмотр выполенных программ</button>
+                    <button class="button1">Просмотр выполненных программ</button>
             </div>
             <div class="buttons">
                 <button class="button1">Выбор программы</button>
