--- a/entrance/entrance.html
+++ b/entrance/entrance.html
@@ -17,7 +17,7 @@
             </a>
           </div>
           <div class="aboutus">
-           <a class="sq" style="text-decoration:none;" href="">О КЛУБЕ</a>
+           <a class="sq" style="text-decoration:none;" href="../MainPage/index.html">О КЛУБЕ</a>
            <a class="sq" style="text-decoration:none;" href="../services/services.html">УСЛУГИ</a>
            <a class="sq" style="text-decoration:none;" href="">SPA</a>
            <a class="sq" style="text-decoration:none;" href="">АБОНИМЕНТЫ</a>
